--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 petgraph = "0.6.4"
 crossterm = "0.27.0"
+num-rational = "0.4"
+strum = "0.25"
+strum_macros = "0.25"
